# Teen-Safety-Compliance-Env

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  baseline_results_run1.json  baseline_results_run2.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt  teen_safety_PRD.md
env/: __init__.py  environment.py  models.py  reward.py  state_manager.py
server/: app.py
tasks/: __init__.py  scenario_generator.py  task10_hard.py  task1_easy.py  task2_medium.py  task3_hard.py  task4_easy.py  task5_easy.py  task6_medium.py  task7_medium.py  task8_medium.py  task9_hard.py
tests/: conftest.py  test_api_and_env_additional.py  test_environment.py  test_hundred_target.py  test_inference.py  test_inference_main_and_io.py  test_models.py  test_reward.py  test_reward_and_state_parametrized.py  test_round2_task_expansion.py  test_scenario_generator.py  test_server_api.py  test_server_contract.py  test_state_manager.py  test_task_scenarios_parametrized.py  test_tasks.py
