[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "teen-safety-compliance-env"
version = "1.0.0"
description = "OpenEnv environment for teen safety compliance tasks"
readme = "teen_safety_PRD.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core",
  "pydantic>=2.0",
  "fastapi",
  "uvicorn[standard]",
  "openai",
  "python-dotenv",
  "huggingface_hub",
  "pytest",
  "httpx",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
