[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "teen-safety-compliance-env"
version = "1.0.1"
description = "OpenEnv environment for teen safety compliance tasks"
readme = "teen_safety_PRD.md"
requires-python = ">=3.11"
dependencies = [
  "openenv-core==0.2.3",
  "pydantic==2.12.5",
  "fastapi==0.135.3",
  "uvicorn[standard]==0.42.0",
  "openai==2.30.0",
  "python-dotenv==1.2.2",
  "huggingface_hub==1.8.0",
  "pytest==9.0.2",
  "httpx==0.28.1",
]

[project.scripts]
server = "server.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
